# daily-digest

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  world_view.md
.ralph/: EVAL_IMPROVEMENTS.md  IMPROVEMENTS-core-agent.md  IMPROVEMENTS-eval-framework.md  IMPROVEMENTS-seed-gen.md  ralph-instruction1.md  ralph-instruction2-seed-gen.md  ralph-instruction2.md  ralph-instruction3-eval-framework.md  world_view_template.md
archive/llm-context-management/: 20260111_200003.json
archive/production-ai-systems/: 20260111_200001.json
archive/trace-driven-development/: 20260111_200002.json
datasets/: approved.jsonl  eval_seeds_v1.jsonl
digests/: 2026-01-11.md  SOURCES.md
docs/: observability-impl.md  observability.md  spec.md  topic-taxonomy.md
fetch_cache/: 00a4e02a1ee47930.json  1399aec680791f78.json  15e4550ee7664a2a.json  1b7c22e83c7126a8.json  2e50ab69ebea3b2c.json  302951acaca272c9.json  38c43325a50c50c6.json  3ef18f59f4cf06c3.json  4d4d99457883131a.json  54433664b97741a8.json  5afc409141ecc9b7.json  638845a2ac57c26f.json  6c790a16de0afd2b.json  9655a09cad90526d.json  978b345c482f3be8.json  b7ab587364b845ea.json  b93c6ec9e9ddd20e.json  b96c03caa01a0399.json  ba0825a3163fdf04.json  c3d3c36a740a9268.json  d439ce023987a7d3.json  e01f130422a9ecda.json  ee8dc8d42d3c663a.json  f30cc9090b3a89d1.json
src/daily_digest/: __init__.py  agent.py  archive.py  cli.py  digest.py  models.py  tools.py  tracing.py  trajectory.py
src/daily_digest/eval/: __init__.py  datasets.py  (+7 more)
tests/: __init__.py  test_evaluators.py
trajectories/: 20260111_153939.json
