[project]
name = "daily-digest"
version = "0.1.0"
description = "Personal intelligence agent that expands seeds into research digests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.5.0",
    "langsmith>=0.2.0",
    "openevals>=0.1.0",
    "python-dotenv>=1.0.0",
    "deepagents>=0.1.0",
    "langchain-tavily>=0.2.16",
    "agentevals>=0.0.9",
]

[project.scripts]
daily-digest = "daily_digest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_digest"]
